breezy-debian (2.8.15) UNRELEASED; urgency=medium

  * Guess upstream tag names if none is explicitly set.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 09 Sep 2018 13:24:02 +0100

breezy-debian (2.8.14) unstable; urgency=medium

  * Update Vcs-Bzr to reflect code hosting is now on code.breezy-
    vcs.org.
  * Read upstream branch from debian/upstream/metadata. LP: #1791456

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 May 2018 15:32:40 +0100

breezy-debian (2.8.13) unstable; urgency=medium

  * Add dependency on python-dulwich. Closes: #899008
  * Remove obsolete URL from debian/copyright.
  * Change Vcs-Bzr URL to launchpad.
  * debian/source/lintian-overrides: Fix source package name.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 18 May 2018 16:40:12 +0100

breezy-debian (2.8.12) unstable; urgency=medium

  * Skip GPG signatures when looking for tarballs.
  * Fix compatibility with newer versions of Breezy.
  * Remove support for 'get-orig-source' debian/rules target, which was
    removed in Debian policy 4.1.4.0.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 03 Apr 2018 01:51:03 +0100

breezy-debian (2.8.11) unstable; urgency=medium

  * Add compatibility for newer versions of Breezy.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 04 Mar 2018 21:25:48 +0000

breezy-debian (2.8.10) unstable; urgency=medium

  * debian/copyright: Fix package name.
  * Fix compatibility with newer versions of breezy.
  * Bump standards version to 4.1.1

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 08 Nov 2017 23:23:20 +0000

breezy-debian (2.8.9) unstable; urgency=medium

  * Update to be compatible with breezy rather than bazaar.
  * Added support for -b in Git-Vcs fields.
  * Only apply/unapply quilt patches on '3.0 (quilt)' format source
    packages. LP: #999586
  * Remove deprecated --result option for 'bzr builddeb'.
  * Remove deprecated export-upstream setting in configuration.
  * Remove deprecated --v3 option from 'bzr dh-make'.